增加一些gradle task以支持一个命令构建EXE镜像或是MSI安装包